testing first cloning

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jquery-playground",
-  "version": "1.0.0",
+  "name": "Max's website boilerplate code",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "dependencies": {
